# PaperLens

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run.py  setup.sh
app/: config.py  database.py  exceptions.py  main.py
app/ai/: base.py  factory.py
app/ai/providers/: gemini.py  ollama.py  openai.py
app/api/: routes.py
app/models/: paper.py
app/services/: keyword_extractor.py  pdf_parser.py  report_generator.py  summarizer.py
frontend/: streamlit_app.py
frontend/landing/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/landing/src/: App.jsx  index.css
frontend/landing/src/components/: DashboardPreview.jsx  FeaturesSection.jsx  Footer.jsx  Hero.jsx  HowItWorks.jsx  Navbar.jsx  SetupGuide.jsx
tests/: test_database.py  test_pdf_parser.py  test_report_generator.py  test_upload.py
